# gdelt-cleaning-pipeline

./: README.md  pyproject.toml  requirements.txt
bundles/: CURSOR_PROMPT_GDELT_EMBEDDINGS.md
landing_page/: index.html
src/: __init__.py
src/api/: __init__.py  search.py
src/embedding/: __init__.py  batch.py  embedder.py
src/ingestion/: __init__.py  manifest.py  worker.py
src/parsing/: __init__.py  gkg_parser.py
src/pipeline/: __init__.py  run.py
src/vectorstore/: __init__.py  lancedb_store.py
